Fixes #152 - corrects inability to dismiss popups on Mobile Safari
Refactors terminology popup manager and attaches close handler to
#content element instead of the document, which wasn't being recognized
on Mobile Safari.

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -483,72 +483,72 @@ a:hover
 
 //=================================================================================
 // popup styles - not currently used
-/*
-.popup-container
+
+.term-popup-container
 {
   position:relative;
-}
 
-.popup
-{
-  min-width:150px;
-    
-    @include border-radius(5px 5px 5px 0px);
-    background:$yellow_dark;
-    border: 1px solid $black_alpha40;
-    @include single-box-shadow($black_alpha40, 0px, 0px, 10px);
-    color:#000;
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    z-index: 9999;
-    cursor:default; 
-    font-size:11px;
-    font-style: normal;
-}
+  .popup
+  {
+    min-width:150px;
+      
+      @include border-radius(5px 5px 5px 0px);
+      background:$yellow_dark;
+      border: 1px solid $black_alpha40;
+      @include single-box-shadow($black_alpha40, 0px, 0px, 10px);
+      color:#000;
+      position: absolute;
+      top: 0px;
+      left: 0px;
+      z-index: 9999;
+      cursor:default; 
+      font-size:11px;
+      font-style: normal;
+  
+    div
+    {
+        padding:10px;
+        margin:0;
+    }
 
-.popup div
-{
-    padding:10px;
-    margin:0;
-}
+    dl
+    {
+      margin:0;
+    }
 
-.popup dl
-{
-  margin:0;
-}
+    dt
+    {
+      font-weight:bold;
+      color:$black_alpha40;
+    }
 
-.popup dt
-{
-  font-weight:bold;
-  color:$black_alpha40;
-}
+    dd
+    {
+      margin:0;
+    }
 
-.popup dd
-{
-  margin:0;
-}
+    .corner
+    {
+        border-radius: 0px 10px 0px 0px;
+        width:10px;
+        height:10px;
+        padding:0;
+        margin:0;
+        background:$black_alpha40;
+        position: absolute;
+        left:0;
+        bottom:0;
+    }
+  }
 
-.popup .corner
-{
-    border-radius: 0px 10px 0px 0px;
-    width:10px;
-    height:10px;
-    padding:0;
-    margin:0;
-    background:$black_alpha40;
-    position: absolute;
-    left:0;
-    bottom:0;
-}
+  .popup-term.active:hover
+  {
+    cursor:pointer;
+    color:$blue_dark;
+    border-bottom:1px solid $black_alpha40;
+  }
 
-.popup-term.active:hover
-{
-  cursor:pointer;
-  color:$blue_dark;
-  border-bottom:1px solid $black_alpha40;
 }
-*/
 
 /*
 .popup-term
